--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,19 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/ryanDancer.js"></script>
+    <script src="src/jaredDancer.js"></script>
+    <script src="src/mouseDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+        <a href="#" class="lineup">Lineup!</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRyanDancer">add a ryan dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJaredDancer">add a jared dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="mouseDancer">add a mouse dancer </a>
+      </div>
     <script src="src/init.js"></script>
   </body>
 </html>
