touching things up

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -8,6 +8,7 @@
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
   <script>
+    alert('moo');
     mocha.setup('bdd');
     window.expect = chai.expect;
     $(function() {
