--- a/dancefloor.html
+++ b/dancefloor.html
@@ -4,11 +4,13 @@
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
+    <script src="buzz/buzz.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/ryanDancer.js"></script>
     <script src="src/jaredDancer.js"></script>
     <script src="src/mouseDancer.js"></script>
+    <script src="src/music.js"></script>
   </head>
   <body>
     <div class="topbar">
