--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,10 +16,10 @@
     <div class="topbar">
       <span class="title">object dance party</span>
         <a href="#" class="lineup">Lineup!</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRyanDancer">add a ryan dancer</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJaredDancer">add a jared dancer</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="mouseDancer">add a mouse dancer </a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="RyanDancer">add a ryan dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="JaredDancer">add a jared dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="MouseDancer">add a mouse dancer </a>
       </div>
     <script src="src/init.js"></script>
   </body>
